--- a/_posts/0000-01-02-abigdeel.md
+++ b/_posts/0000-01-02-abigdeel.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+This text is not a natural cave formation...
 Use the left arrow to go back!
